    - Fixed issue where dying in a level with a "No Yoshi" entrance would respawn you in the wrong sublevel (thanks Abdu for reporting this).
    - Implemented death counter display.
    - Fixed Retry RAM reset loop only resetting the first byte (thanks BabaYegha and FYRE150 for reporting an odd issue caused by this).
    - Optimized the Retry RAM reset code even more.
    - Put Retry RAM reset code in gamemode 8 too. This fixes an issue where if people prevent the erase file menu to reload the title screen after erasing a file, the new save file would use the addresses saved to SRAM before the file was erased.
    - Removed code to reset the !ram_prompt_override and !ram_disable_exit addresses on overworld load.
    - Added !ram_prompt_x_pos and !ram_prompt_y_pos to change the prompt position at runtime.
    - Added !ram_disable_box to be able to enable/disable the Retry prompt box at runtime. A bunch of code in nmi.asm, prompt_oam.asm and prompt.asm was rewritten to account for this.

v0.2:
    - Fixed issue with the Retry prompt not appearing when !no_prompt_box = 1 and setting !ram_disable_box to #$00.
    - Added SRAM initialization code for new save files and added "load_new_file" extra routine.

v0.2.1:
    - Fixed issue where choosing an option in the Retry prompt wouldn't play the sound effect.

v0.2.2:
    - Added an option to replace "Mario" with "DEATHS" in the status bar, like the standalone Death Counter patch.
    - Optimized sprite load index table reset loop.
    - Fixed issue where calling $00F606 in consecutive frames could make the level's music restart even if it didn't change (similar fix to v0.1.9).

v0.2.3:
    - Fixed issue with ROMs where Lunar Magic v3.0+ was used but the routine at $03BCDC wasn't installed (thanks to SJandCharlieTheCat for reporting this).
    - Change get_screen_number macro to a subroutine and made it check for LM3's $03BCDC routine installation at runtime, for more robustness.