@@ -70,3 +70,4 @@ v0.2.2:
 v0.2.3:
     - Fixed issue with ROMs where Lunar Magic v3.0+ was used but the routine at $03BCDC wasn't installed (thanks to SJandCharlieTheCat for reporting this).
     - Change get_screen_number macro to a subroutine and made it check for LM3's $03BCDC routine installation at runtime, for more robustness.
+    - Changed settings.asm formatting to be a bit easier to use.
